--- a/index.html
+++ b/index.html
@@ -49,11 +49,7 @@
     <footer class="glass">
       <div>
         <p>
-          Developed by<a
-            href="https://github.com/TonyHermann/"
-            target="_blank"
-            rel="noreferrer"
-            >@TonyHermann</a>~竹
+          Developed by<a href="https://github.com/TonyHermann/"  target="_blank" rel="noreferrer">@TonyHermann</a>~竹
         </p>
       </div>
     </footer>
