--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
             <div class="themeColor lightblue"></div>
           </div>
           <div class="buttonWithIcon">
-            <a href="/" onclick="route()"
-              ><i class="fa fa-home" aria-hidden="true"></i>スタートページ</a>
+            <a href="/" onclick="route()"><i class="fa fa-home" aria-hidden="true"></i>スタートページ</a>
           </div>
           <div class="buttonWithIcon">
-            <a href="/legacy" onclick="route()"
-              ><i class="fa fa-home" aria-hidden="true"></i>Legacy</a>
+            <a href="/legacy" onclick="route()"><i class="fa fa-home" aria-hidden="true"></i>Legacy</a>
+          </div>
+          <div class="buttonWithIcon" id="addTransaction">
+            <a href="#"><i class="fa fa-home" aria-hidden="true"></i>Añadir movimientos</a>
           </div>
         </div>
       </nav>
