--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <div class="buttonWithIcon">
             <a href="/legacy" onclick="route()"><i class="fa fa-home" aria-hidden="true"></i>Legacy</a>
           </div>
-          <div class="buttonWithIcon" id="addTransaction">
-            <a href="#"><i class="fa fa-home" aria-hidden="true"></i>Añadir movimientos</a>
+          <div class="buttonWithIcon" id="admCat">
+            <a href="#"><i class="fa fa-home" aria-hidden="true"></i>Administrar categorías</a>
           </div>
         </div>
       </nav>
